--- a/ZavrsniRad/src/app/menu/menu.component.scss
+++ b/ZavrsniRad/src/app/menu/menu.component.scss
@@ -1,14 +1,5 @@
-/*colors{
-$deepBlue: #2460A7FF;
-$northernSky: #85B3D1FF;
-$babyBlue: #B3C7D6FF;
-$coffee: #D9B48FFF;
-}*/
-
-$deepBlue: #2460A7FF;
-$northernSky: #85B3D1FF;
-$babyBlue: #B3C7D6FF;
-$coffee: #D9B48FFF;
+@import '../scss-components/scss-variables';  //boje
+@import '../scss-components/scss-mixins';
 
 #menu
 {
@@ -181,6 +172,7 @@ $coffee: #D9B48FFF;
                 }
             }
         }
+
         #menuLeft2
         {
             display: none;
@@ -280,7 +272,11 @@ $coffee: #D9B48FFF;
         #menuRight
         {
             float: right;
+            height: 70px;
             display: flex;
+            justify-content: center;
+            align-items: center;
+            
             .centerRight
             {
                 margin-right: 15px;
@@ -289,107 +285,17 @@ $coffee: #D9B48FFF;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                
                 #login ,#signup
                 {
-                    position: relative;
-                    margin-top: 15%;
-                    width: 95px;
-                    height: 35px;
-                    border: 3px solid $northernSky;
-                    border-radius: 8px;
-                    font-size: 18px;
-                    font-family: 'Kanit', sans-serif;
-                    color: $babyBlue;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    cursor: pointer;
-                    //animationForLoginAndSignup{
-                        #animationTop, #animationLeft, #animationRight, #animationBottom, #animationTopRight
-                        {
-                            display: none;
-                            position: absolute;
-                            background-color: $northernSky;
-                            width: 3px;
-                            height: 3px;
-                        }
-                        
-                        #animationTop
-                        {
-                            top: -3px;
-                            box-shadow: 0px 0px 10px 5px $northernSky;
-                            animation: 2s infinite linear;
-                        }
-                        
-                        #animationLeft
-                        {
-                            left: -3px;
-                            animation: 2s infinite linear;
-                        }
-                        
-                        #animationRight
-                        {
-                            right: -3px;
-                            top: -3px;
-                            animation: 2s infinite linear;
-                        }
-                        
-                        #animationBottom
-                        {
-                            bottom: -3px;
-                            animation: 2s infinite linear;
-                        }
-                        
-                        #animationTopRight
-                        {
-                            top: -3px;
-                            left: -3px;
-                            animation: 2s infinite linear;
-                        }
-                        
-                        @keyframes anTop
-                        {
-                            0% {width: 0px; left: 50%;}
-                            20% {width: 50%; left: 50%;}
-                            100% {width: 50%; left: 50%;}
-                        }
-                        
-                        @keyframes anRight
-                        {
-                            0% {height: 0px;}
-                            20% {height: 0px; top: -3px;}
-                            40% {height: 100%; top: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                            100% {height: 100%; top: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                        }
-                        
-                        @keyframes anBottom
-                        {
-                            0% {width: 0px;}
-                            40% {width: 0px;}
-                            60% {width: 100%; right: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                            100% {width: 100%; right: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                        }
-                        
-                        @keyframes anLeft
-                        {
-                            0% {height: 0px;}
-                            60% {height: 0px;}
-                            80% {height: 100%; bottom: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                            100% {height: 100%; bottom: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                        }
-                        
-                        @keyframes anTopRight
-                        {
-                            0% {width: 0px;}
-                            80% {width: 0px;}
-                            100% {width: 50%; left: 0px; box-shadow: 0px 0px 10px 5px #85B3D1FF;}
-                        }
-                    //}
+                    @include shapeOnBlue;
+                    //@include animationForButtons
                 }
                 #login:hover, #signup:hover
                 {
-                    filter: opacity(.8);
+                    @include hoverOnBlue;
                 }
+
                 @media only screen and (max-width: 550px) {
                     #login ,#signup
                     {
@@ -416,6 +322,12 @@ $coffee: #D9B48FFF;
             {
                 display: flex;
             }
+        }
+    }
+    @media only screen and (min-width: 1366px){
+        #menuContent
+        {
+            width: 1366px;
         }
     }
 }
