search bar gg, filters gg....

--- a/ZavrsniRad/src/app/homePage/slides/slides.component.html
+++ b/ZavrsniRad/src/app/homePage/slides/slides.component.html
@@ -3,19 +3,19 @@
         <div id="upperHalf">
             <div id="text">
                 <div id="text1" [ngStyle]="text1">
-                    <p id="h1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem nobis aliquid minus incidunt molestiae perferendis iure et ratione enim.</p><br>
-                    <p id="h2">Lorem ipsum dolor sit amet.</p><br>
-                    <div id="learnMore">Learn more</div>
+                    <div><p id="h1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quidem nobis aliquid minus incidunt molestiae perferendis iure et ratione enim.</p></div><br>
+                    <div><p id="h2">Lorem ipsum dolor sit amet.</p></div><br>
+                    <more name="more" [pictures]="pictures1"></more><br><br>
                 </div>
                 <div id="text2" [ngStyle]="text2">
-                    <p id="h1">Lorem ipsum dolor sit amet.</p><br>
-                    <p id="h2">Lorem ipsum dolor sit amet.</p><br>
-                    <div id="learnMore">Learn more</div>
+                    <div><p id="h1">Lorem ipsum dolor sit amet.</p></div><br>
+                    <div><p id="h2">Lorem ipsum dolor sit amet.</p></div><br>
+                    <!--<more name="more2" [pictures]="pictures2"></more>--><br><br>
                 </div>
                 <div id="text3" [ngStyle]="text3">
-                    <p id="h1">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><br>
-                    <p id="h2">Lorem ipsum dolor sit amet.</p><br>
-                    <div id="learnMore">Learn more</div>
+                    <div><p id="h1">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></div><br>
+                    <div><p id="h2">Lorem ipsum dolor sit amet.</p></div><br>
+                    <!--<more [pictures]="pictures3"></more>--><br><br>
                 </div>
             </div>
             <div id="picture">
