--- a/ZavrsniRad/src/app/homePage/slides/slides.component.scss
+++ b/ZavrsniRad/src/app/homePage/slides/slides.component.scss
@@ -1,5 +1,5 @@
-@import '../scss-components/scss-variables';
-@import '../scss-components/scss-mixins';
+@import '../../scss-components/scss-variables';
+@import '../../scss-components/scss-mixins';
 
 #slides
 {
@@ -13,8 +13,9 @@
     #slide
     {
         margin: 50px;
-        width: 1150px;
-        height: 600px;
+        width: 100%;
+        //promjenut ove dimenzije
+        //height: 600px;
         display: flex;
         flex-direction: column;
         
@@ -23,11 +24,14 @@
             display: flex;
             width: 100%;
             height: 70%;
+            margin-bottom: 10px;
 
             #text
             {
                 width: 35%;
-                height: 100%;
+                //height: 100%;
+                height: 350px;
+                transition: 1s;
                 padding: 0% 5% 0% 10%;
                 border-bottom: 3px solid $northernSky;
                 color: $babyBlue;
@@ -70,7 +74,8 @@
             #picture
             {
                 width: 50%;
-                height: 100%;
+                //height: 100%;
+                //min-height: 350px;
                 border-left: 3px solid $northernSky;
                 border-bottom: 3px solid $northernSky;
                 display: flex;
@@ -180,7 +185,6 @@
             }
             #OH3part
             {
-                border-top: 3px solid $northernSky;
                 width: 33.4%;
                 height: 100%;
                 @include font;
@@ -214,6 +218,53 @@
             {
                 padding: 20px;
                 text-align: center;
+            }
+        }
+        @media only screen and (max-width:800px)
+        {
+            #upperHalf{
+                flex-direction: column;
+                #text
+                {
+                    width: 85%;
+                    height: fit-content;
+                    justify-content: center;
+                    align-items: center;
+                    #text1,#text2,#text3
+                    {
+                        text-align: center;
+                        flex-direction: column;
+                        align-items: center;
+                    }
+                }
+                #picture{
+                    width: 100%;
+                    height: 350px;
+                    border: none;
+                    border-bottom: 3px solid $northernSky;
+                }
+            }
+        }
+        @media only screen and (max-width:600px)
+        {
+            #upperHalf
+            {
+                margin: 0;
+            }
+
+            #otherHalf
+            {
+                flex-direction: column;
+
+                #OH1part,#OH2part,#OH3part
+                {
+                    border-bottom: 3px solid $northernSky;
+                    //border-top: 3px solid $northernSky;
+                    border-top: none;
+                    border-left: none;
+                    border-right: none;
+                    width: 100%;
+                }
             }
         }
     }
