--- a/ZavrsniRad/src/app/menu/login/login.component.html
+++ b/ZavrsniRad/src/app/menu/login/login.component.html
@@ -7,7 +7,7 @@
     Log in
 </div>
 
-<div id="darkCurtain" [ngStyle]="login"></div>
+<div id="darkCurtain" [ngStyle]="darkCurtainOpacity"></div>
 <div id="loginPage" [ngStyle]="login">
     <div id="loginUser">
         <div id="firstPart">
