--- a/ZavrsniRad/src/app/menu/menu.component.scss
+++ b/ZavrsniRad/src/app/menu/menu.component.scss
@@ -6,16 +6,25 @@
     position: relative;
     width: 100%;
     background-color: $deepBlue;
-    padding: 10px 0px;
+    //padding: 10px 0px;
     border-bottom: 2px solid $northernSky;
     display: flex;
     justify-content: center;
     align-items: center;
     #menuContent
     {
-        width: 98%;
+        z-index: 6;
+        background-color: #2460A7FF;
+        width: 100%;
+        padding: 10px 0px;
         #menuLeft
         {
+            a
+            {
+                color: $babyBlue;
+                text-decoration: none;
+            }
+
             display: flex;
             float: left;
             .centerLeft
@@ -43,6 +52,7 @@
             
             #mobilesHover, #tabletsHover, #multimediaHover, #menuMQ
             {
+                
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -155,6 +165,7 @@
             {
                 filter: brightness(.8);
             }
+
             @media only screen and (max-width: 1010px) {
                 #mobiles, #tablets, #multimedia
                 {
@@ -205,7 +216,7 @@
                 display:none;
                 position: absolute;
                 left: 0px;
-                top: 94px;
+                top: 90px;
                 width: 100%;
                 background-color: $deepBlue;
                 overflow: hidden;
@@ -214,17 +225,19 @@
                     width: 100%;
                     height: 2px;
                     background: $northernSky;
-                    margin-left: 25px;
+                    //margin-left: 25px;
                 }
                 .menu2
                 {
+                    //border-bottom: 3px solid $northernSky;
+
                     #mobiles2, #tablets2, #multimedia2
                     {
                         padding: 15px 0px;
                         width: 100%;
                         font-size: 20px;
                         font-family: 'Kanit', sans-serif;
-                        margin-left: 25px;
+                        //margin-left: 25px;
                         color: $babyBlue;
                         text-align: center;
                         cursor: default;
@@ -240,6 +253,7 @@
 
                     #typesOfMobiles, #typesOfTablets, #typesOfMultimedia
                     {
+                        display: none;
                         padding-left: 45px;
                         font-size: 15px;
                         flex-direction: column;
@@ -330,4 +344,16 @@
             width: 1366px;
         }
     }
+}
+
+#darkCurtainUnderMenu
+{
+    position: fixed;
+    display: none;
+    top: 0;
+    z-index: 5;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    filter: opacity(.8);
 }
