--- a/ZavrsniRad/src/app/menu/signup/signup.component.html
+++ b/ZavrsniRad/src/app/menu/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div id="signup" (click)="showLogin()" (mouseover)="showBorder()" (mouseleave)="hideBorder()">
+<div id="login" (click)="showLogin()" (museover)="showBorder()" (mouseleave)="hideBorder()">
     <div id="animationTopRight" [ngStyle]="borderBtnSignup1"></div>
     <div id="animationTop" [ngStyle]="borderBtnSignup2"></div>
     <div id="animationRight" [ngStyle]="borderBtnSignup3"></div>
@@ -7,64 +7,40 @@
     Sign up
 </div>
 
-<div id="darkCurtain" [ngStyle]="login"></div>
+<div id="darkCurtain" [ngStyle]="darkCurtainOpacity"></div>
 <div id="loginPage" [ngStyle]="login">
-    <div id="secondPart">
-        <div id="content">
-            <div class="proa">
-                <div id="title">SIGN UP</div>
-            </div>
-            <br>
-            <div class="proa">
-                <div class="typeInformation">NAME:  *</div>
+    <div id="loginUser">
+        <div id="firstPart">
+            <div id="img"><img width="90px" src="../../../assets/logo.png" alt=""></div><br>
+            <div>Harry moby shop</div>
+        </div>
+        <div id="secondPart">
+            <div id="content">
+                <div id="title">SIGN UP</div><br>
+                <div class="typeInformation">IME: *</div>
                 <div class="input">
                     <input type="text" placeholder="Type your name">
-                </div>
-            </div>
-            <div class="proa">
-                <div class="typeInformation">NAME:  *</div>
+                </div><br>
+                <div class="typeInformation">SURNAME: *</div>
                 <div class="input">
-                    <input type="text" placeholder="Type your name">
-                </div>
-            </div>
-            <div class="proa">
-                <div class="typeInformation">NAME:  *</div>
-                <div class="input">
-                    <input type="text" placeholder="Type your name">
-                </div>
-            </div>
-            <br>
-            <div class="proa">
-                <div class="typeInformation">SURNAME:  *</div>
-                <div class="input">
-                    <input type="text" placeholder="Type your name">
-                </div>
-            </div>
-            <br>
-            <div class="proa">
-                <div class="typeInformation">EMAIL:  *</div>
+                    <input type="text" placeholder="Type your surname">
+                </div><br>
+                <div class="typeInformation">EMAIL: *</div>
                 <div class="input">
                     <input type="email" placeholder="Type your email">
-                </div>
-            </div>
-            <br>
-            <div class="proa">
-                <div class="typeInformation">PASSWORD:  *</div>
+                </div><br>
+                <div class="typeInformation">PASSWORD: *</div>
                 <div class="input">
                     <input type="password" placeholder="Type your password">
-                </div>
-            </div>
-            <br>
-            <div class="proa">
-                <div class="typeInformation">CONFIRM PASSWORD:  *</div>
+                </div><br>
+                <div class="typeInformation">CONFIRM PASSWORD: *</div>
                 <div class="input">
-                    <input type="text" placeholder="Type your name">
+                    <input type="password" placeholder="Confirm your password">
+                </div><br><br>
+                <div id="buttons">
+                    <div id="loginBtn2">SIGN UP</div>
+                    <div id="cancle" (click)="hideLogin()">NAZAD</div>
                 </div>
-            </div>
-            <br><br>
-            <div class="proa" id="buttons">
-                <div id="loginBtn2">SIGN UP</div>&nbsp;&nbsp;&nbsp;
-                <div id="cancle" (click)="hideLogin()">NAZAD</div>
             </div>
         </div>
     </div>
