/product almost done ....

--- a/ZavrsniRad/src/app/menu/login/login.component.html
+++ b/ZavrsniRad/src/app/menu/login/login.component.html
@@ -17,11 +17,11 @@
         <div id="secondPart">
             <div id="content">
                 <div id="title">LOG IN</div><br>
-                <div class="typeInformation">EMAIL:</div>
+                <div class="typeInformation" [(ngModel)]="email">EMAIL:</div>
                 <div class="input">
                     <input type="email" placeholder="Type your email">
                 </div><br>
-                <div class="typeInformation">PASSWORD:</div>
+                <div class="typeInformation" [(ngModel)]="password">PASSWORD:</div>
                 <div class="input">
                     <input type="password" placeholder="Type your password">
                 </div><br><br>
