--- a/ZavrsniRad/src/app/menu/signup/signup.component.html
+++ b/ZavrsniRad/src/app/menu/signup/signup.component.html
@@ -21,7 +21,7 @@
                 <div class="input">
                     <input type="text" placeholder="Type your name">
                 </div><br>
-                <div class="typeInformation">SURNAME: *</div>
+                <div class="typeInformation">PREZIME: *</div>
                 <div class="input">
                     <input type="text" placeholder="Type your surname">
                 </div><br>
@@ -33,7 +33,7 @@
                 <div class="input">
                     <input type="password" placeholder="Type your password">
                 </div><br>
-                <div class="typeInformation">CONFIRM PASSWORD: *</div>
+                <div class="typeInformation">POTVRDI PASSWORD: *</div>
                 <div class="input">
                     <input type="password" placeholder="Confirm your password">
                 </div><br><br>
