--- a/ZavrsniRad/src/app/menu/signup/signup.component.scss
+++ b/ZavrsniRad/src/app/menu/signup/signup.component.scss
@@ -95,7 +95,7 @@
             align-items: center;
             width: 40%;
             height: 100%;
-            padding: 0 5% 0 5%;
+            padding: 20px 5% 20px 5%;
             background-color: $deepBlue;
             border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
