--- a/ZavrsniRad/src/app/products/products.component.scss
+++ b/ZavrsniRad/src/app/products/products.component.scss
@@ -3,6 +3,7 @@
 
 #products
 {
+    min-height: 100vh;
     #darkCurtainFilters
     {
         display: none;
@@ -134,6 +135,7 @@
             color: $babyBlue;
             padding: 10px 0;
             overflow: hidden;
+            border-bottom: 3px solid;
 
             #leftContent
             {
@@ -146,6 +148,7 @@
 
                 .leftBtn
                 {
+                    position: relative;
                     height: 70px;
                     display: flex;
                     justify-content: center;
@@ -154,6 +157,7 @@
                     @include font;
                     font-size: 19px;
                     cursor: pointer;
+                    //margin: 10px 0;
                 }
 
                 .leftBtn:hover
@@ -182,7 +186,7 @@
                     border: 3px solid $northernSky;
                     border-radius: 10px;
                     margin-right: 15px;
-                    z-index: 5;
+                    z-index: 4;
 
                     #img
                     {
@@ -205,6 +209,7 @@
                         height: 35px;
                         border: 3px solid $northernSky;
                         border-radius: 10px;
+                        background-color: $northernSky;
                         display: flex;
                         justify-content: center;
                         align-items: center;
@@ -214,20 +219,36 @@
                         z-index: 4;
                         transition: 1.5s;
 
+                        #help
+                        {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            width: 35px;
+                            height: 100%;
+                            background-color: $deepBlue;
+                            border: 3px solid $northernSky;
+                            border-radius: 10px;
+                            position: absolute;
+                            left: -3px;
+                        }
+
                         input
                         {
-                            width: 80%;
+                            width: 65%;
                             height: 20px;
+                            margin-left: 20px;
                             font-size: 15px;
-                            color: $babyBlue;
-                            background-color: $deepBlue;
+                            color: $deepBlue;
+                            background-color: $northernSky;
                             border: none;
                             outline: none;
+                            text-align: center;
                         }
 
                         input::placeholder
                         {
-                            color: $babyBlue;
+                            color: $deepBlue;
                         }
                     }
                 }
@@ -254,11 +275,22 @@
             @include font;
             text-align: center;
 
-            #noMobile
+            #noMobile, #noSearch
             {
+                padding: 50px 0;
                 display: none;
                 color: $babyBlue;
                 font-size: 35px;
+                margin-top: 10%;
+            }
+
+            #halfLoading{
+                width: 100vw;
+                height: 50vh;
+                display: none;
+                justify-content: center;
+                align-items: center;
+                @include halfLoading
             }
 
             #product
